welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:16: error: not found: value n
    n = (decalage-1)%i
    ^